# component-data-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
component_data_generator/: __main__.py  _types.py  combine_image.py  convert_pdf_to_png.py  cut_image.py  cut_legend.py  generate_prompt.py  generate_test_data.py  generator.py  probability.py  template.py  util.py
convert_to_yolo/: convert_to_train_valid_test.py  convert_to_yolo.py  convert_to_yolo_mit.py
utils/: __init__.py
yolo_utils/: gradioweb.py  predict_batch.py
